2019-12-23  Daniel Shahaf  <danielsh@apache.org>

	* unposted: Completion/Unix/Command/_stdbuf: Fix mismatch
	between the long options on the one hand, and the short options
	and descriptions on the other hand.

2019-12-22  Daniel Shahaf  <danielsh@apache.org>

	* unposted: Test/B01cd.ztst, Util/ztst.vim: Fix broken build:
	45109 (!) broke Test/Y01completion.ztst.

	* 45110: Doc/Zsh/grammar.yo: zshmisc(1): Fix markup of "try-list"
	and "always-list".

	* 45111: Doc/Zsh/grammar.yo, Etc/BUGS, NEWS,
	Test/A01grammar.ztst: zshmisc(1): Clarify the documentation of
	'return' and 'exit' in conjunction with try/always

	* 45112: Doc/Zsh/mod_zutil.yo: zshmodules: Explicitly document
	the return values of the 'zstyle' getters -s, -b, and -a.

	* 45113: Doc/Zsh/contrib.yo: vcs_info docs: Clarify documentation
	of the %p/%u/%a patch-format expandos.

	* 45114: Functions/VCS_Info/VCS_INFO_patch2subject: vcs_info
	quilt: Improve support for svn-style patch headers.

	* 45115: Misc/vcs_info-examples: vcs_info examples: Make the
	quilt-patch-dir example friendlier.

	* 45116: Misc/vcs_info-examples: vcs_info examples: Add an
	example of showing Git environment variables.

	* 45107: Test/ztst.vim: Highlight some more special variables

	* 45108: Test/ztst.vim: Conceal the '>' or '?' on pattern
	expected output / expected errput lines.

	* 45109: Test/B01cd.ztst, Test/ztst.vim, Util/zyodl.vim: Add
	Vim highlighting file for Test/*.ztst files.

2019-12-21  dana  <dana@dana.is>

	* unposted: Config/version.mk: Update for 5.7.1-test-2

	* 45101: Etc/creating-a-release.txt: Adjust white space

	* 45101 (tweaked per 45104): Etc/creating-a-release.txt:
	Document new dev/test versioning scheme, clarify other release
	steps. New versioning scheme not to be used until after 5.8

2019-12-21  Daniel Shahaf  <danielsh@apache.org>

	* unposted: Test/A01grammar.ztst: Group related tests.
	No functional change.

	* unposted: Etc/BUGS: Add two bugs discussed on -workers@
	this week
